# Module-Dependencies-Tree

./: mod_dt_newos.py  show_dependencies.py
mod_dt_tool/: LICENSE  README.md  pyproject.toml
mod_dt_tool/src/mod_dt/: __init__.py  __main__.py  module_dt.py
module_dt.project/: README.md  pyproject.toml
module_dt.project/module_dt/: __main__.py  module_dt.py
