[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "module_dt"
version = "1.0.0"
description = "Visualize the module dependency tree of any module based off the lmod system"
readme = "README.md"
authors = [{ name = "Juan Carlier", email = "carlier1@msu.edu" },{ name = "Dirk Colbry", email = "colbrydi@msu.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["module", "dependency", "tree"]
dependencies = [
    "pydot >= 2.0.0",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.7"


#[project.optional-dependencies]
#dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]


[project.urls]
Homepage = "https://github.com/JuanEstebanCarlier/Module-Dependencies-Tree"

[project.scripts]
####
module_dt = "module_dt.__main__:main"